feat: API Controller and Redis Implementation + Integration